consul-deployment.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: consul
spec:
  replicas: 3
  serviceName: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: consul
        image: consul:latest
        args: 
        - agent
        - -advertise=$(POD_IP)
        - -bind=0.0.0.0
        - -bootstrap-expect=3
        - -client=0.0.0.0
        - -domain=cluster.local
        - -server
        lifecycle:
          preStop:
            exec:
              command:
              - consul
              - leave
        volumeMounts:
        - name: consul-data
          mountPath: /consul/data
  volumeClaimTemplates:
  - metadata:
      name: consul-data
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests: 
          storage: 1Gi
