vault-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vault
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vault
    spec:
      volumes:
      - name: vault-config
        configMap:
          name: vault
      - name: vault-consul-config
        configMap:
          name: vault-consul-config
      containers: 
      - name: consul-agent
        image: consul:latest
        args:
        - agent
        - -disable-host-node-id
        - -retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local
        - -retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local
        - -retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local
        volumeMounts:
        - name: vault-consul-config
          mountPath: /consul/config

      - name: vault
        image: vault:latest
        securityContext:
          capabilities:
            add: 
            - IPC_LOCK
        args:
        - server
        volumeMounts:
        - name: vault-config
          mountPath: /vault/config
