consul-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    name: consul
spec:
  selector:
    app: consul
  clusterIP: "None"
  ports:
  - name: server-rpc
    port: 8300
  - name: serf-lan-tcp
    port: 8301
  - name: serf-lan-udp
    port: 8301
    protocol: "UDP"
  - name: serf-wan-tcp
    port: 8302
  - name: serf-wan-udp
    port: 8302
    protocol: "UDP"
  - name: http
    port: 8500
  - name: dns-tcp
    port: 8600
  - name: dns-udp
    port: 8600
    protocol: "UDP"
