vault-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  selector:
    app: vault
  ports:
  - name: http
    port: 8200
    protocol: TCP
