vault-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-in
spec:
  backend:
    serviceName: vault
    servicePort: 8200
